# project

./: DEVELOPER_GUIDE.md  Dockerfile.frontend  GITHUB_README.md  PROJECT_SUMMARY.md  README.md  WINDOWS_SETUP.md  docker-compose.yml  nginx-frontend.conf  package.json  pyproject.toml  quick-start.bat  quick-start.sh  setup-complete.bat  setup.sh  setup_complete.sh  start.bat  tailwind.config.js  test-system.bat  test_complete_system.py
api/: openapi.yaml
backend/: Dockerfile  document_processor.py  env.example  main.py  requirements.txt
backend/crawler/: legal_crawler.py
backend/rag/: vector_store.py
backend/services/: ai_service.py  gemini_client.py
public/: index.html
src/: App.css  App.jsx  index.css
src/components/: ChatInterface.jsx  DemoView.jsx  PlanView.jsx  StageCard.jsx  StageDetail.jsx  UploadArea.jsx
src/data/: samplePlan.js
